--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .header{
   background-image: url("\pattern-bg.png");
   width: 100%;
-  height:50vh;
+  height:45vh;
   background-size: cover;
   display:flex;
   font-size: 20px;
@@ -9,6 +9,7 @@
   font-family: 'Rubik', monospace;
   flex-direction: column;
   align-items: center;
+  padding-top:3%;
 }
 .ip-adress{
   width: 500px;
